# pgutils

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/pgutils/: __init__.py  connection.py  db.py
tests/: conftest.py  test_connection.py
