[metadata]
name = pgutils
version = 2021.11.1
author = Balázs Dukai
author_email = balazs@balazsdukai.me
description = Wrappers around psycopg2 functions to make life easier. No ORM.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/balazsdukai/pgutils
project_urls =
    Bug Tracker = https://github.com/balazsdukai/pgutils/issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
package_dir =
    = src
packages = pgutils
python_requires = >=3.8
install_requires =
    psycopg2-binary

[options.extras_require]
dev = pytest; BumpVer

[options.packages.find]
where = src

[bumpver]
current_version = "2021.11.1"
version_pattern = "YYYY.MM.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[bumpver:file_patterns]
setup.cfg =
    version = {version}
    current_version = "{version}"
src/bag3d_surfaces/__init__.py =
    __version__ = "{version}"
